--- a/org/prog-styles/results.org
+++ b/org/prog-styles/results.org
@@ -26,7 +26,7 @@ time  -  203
 good  -  201
 #+END_EXAMPLE
 
-*** COMMENT 
+*** COMMENT About the results
 
 The above code block is meant to be included after then =#+RESULTS= directive
 of the code block which executes the exercise.
