--- a/README.org
+++ b/README.org
@@ -4,5 +4,5 @@
 Several attempts at literate programming using Org mode.
 
 - Source of exercises:
-  + Under =org/prog-styles/= :: Crista Lopes excellent /[[https://github.com/crista/exercises-in-programming-style][Exercises in Programming Styles]]/ repository
+  + Under =org/prog-styles/= :: Crista Lopes excellent /[[https://github.com/crista/exercises-in-programming-style][Exercises in Programming Styles]]/ 
 
