--- a/org/prog-styles/transducers/ruby.org
+++ b/org/prog-styles/transducers/ruby.org
@@ -67,7 +67,7 @@ The collection upon which we will be applying the transformations are
 are each one of the lines that exist in the text.
 
 #+BEGIN_SRC ruby :tangle src/prog-styles/transducers-in-ruby/run.rb
-  lines            = File.read(PRIDE_AND_PREJUDICE).lines
+  lines = File.read(PRIDE_AND_PREJUDICE).lines
 #+END_SRC
 
 **** The Reducer
@@ -143,7 +143,7 @@ term frequency list.
 
 **** Printing the results
 
-To verify the results, we only want to check what where the top 25
+To verify the results, we only want to check which were the top 25
 terms that have the highest frequency
 
 #+BEGIN_SRC ruby :tangle src/prog-styles/transducers-in-ruby/run.rb
