--- a/org/prog-styles/03-monolith/ruby.org
+++ b/org/prog-styles/03-monolith/ruby.org
@@ -16,7 +16,7 @@
 
 **** Define the words that have to be filtered
 
-#+BEGIN_SRC ruby  :results output :tangle src/prog-styles/monolith-in-ruby/run.rb :mkdirp true
+#+BEGIN_SRC ruby :tangle src/exercises-in-programming-style/03-monolith/tf-03.rb :mkdirp true
   SRC_ROOT		= File.join(File.expand_path("."), "src", "exercises-in-programming-style")
   PRIDE_AND_PREJUDICE	= File.join(SRC_ROOT, "pride-and-prejudice.txt")
   STOP_WORDS		= File.join(SRC_ROOT, 'stop_words.txt')
@@ -27,7 +27,7 @@
 
 **** Keep a global list with counters (=@words=)
 
-#+BEGIN_SRC ruby  :results output :tangle src/prog-styles/monolith-in-ruby/run.rb :mkdirp true
+#+BEGIN_SRC ruby :tangle src/exercises-in-programming-style/03-monolith/tf-03.rb :mkdirp true
 
   @words = Hash.new {|h,k| h[k] = 0 }
 
@@ -35,7 +35,7 @@
 
 **** Scanning the file and filtering stop words
 
-#+BEGIN_SRC ruby  :results output :tangle src/prog-styles/monolith-in-ruby/run.rb :mkdirp true
+#+BEGIN_SRC ruby :tangle src/exercises-in-programming-style/03-monolith/tf-03.rb :mkdirp true
 
   File.read(PRIDE_AND_PREJUDICE).each_line do |line|
     line.gsub!(/[^a-zA-Z0-9]/, " ") # remove non alphanumeric
@@ -50,7 +50,7 @@
 
 **** Sort and pick 25 words
 
-#+BEGIN_SRC ruby  :results output :tangle src/prog-styles/monolith-in-ruby/run.rb :mkdirp true
+#+BEGIN_SRC ruby :tangle src/exercises-in-programming-style/03-monolith/tf-03.rb :mkdirp true
   @words.sort {|a,b| a[1] <=> b[1]}.reverse[0...25].each do |k, v|
     puts "#{k}  -  #{v}"
   end
@@ -60,8 +60,13 @@
 
 #+name: ruby-monolith
 #+BEGIN_SRC sh
-ruby src/prog-styles/monolith-in-ruby/run.rb
+ruby src/exercises-in-programming-style/03-monolith/tf-03.rb
 #+END_SRC
 
 #+RESULTS:
 #+include: "org/prog-styles/results.org"
+
+#+name: ruby-beautify
+#+BEGIN_SRC sh
+bundle exec rbeautify src/exercises-in-programming-style/03-monolith/tf-03.rb
+#+END_SRC
