--- a/org/prog-styles/03-monolith/haskell.org
+++ b/org/prog-styles/03-monolith/haskell.org
@@ -106,3 +106,7 @@ runhaskell src/exercises-in-programming-style/03-monolith/tf-03.hs
 
 #+RESULTS: 
 #+include: "org/prog-styles/results.org"
+
+*** Thanks
+
+Thanks to [[https://github.com/yamadapc][yamadapc]] for the great intro to Haskell and sharing this example :)
